# decentralized-storage

./: .env  Cargo.toml  README.md  decrypted.txt  encrypted.txt  encrypted_key_file
keys/: key_data.json
src/: access_control.rs  api_.rs  auth.rs  bsc_integration.rs  encryption.rs  main.rs  network.rs  pbe_.rs  rest_api_.rs  storage_.rs
src/access-control/: mod.rs
src/api/: mod.rs  storage_api.rs
src/backend/: api.rs  encryption.rs  main.rs
src/blockchain/: mod.rs
src/bsc_integration/: mod.rs
src/encryption/: mod.rs
src/file_management/: mod.rs
src/file_process/: blockchain.rs  main.rs  models.rs  storage_processes.rs
src/file_storage/: mod.rs  network.rs
src/file_system/: file_operations.rs  mod.rs
src/key-management/: mod.rs
src/key_management/: mod.rs
src/network_behaviour/: mod.rs
src/node/: challange.rs  disk_manager.rs  main.rs  mod.rs  rest_api.rs  storage.rs
src/node-manager/: mod.rs
src/p2p/: mod.rs
src/proof-of-spacetime/: mod.rs
src/proof_of_spacetime/: mod.rs
src/storage/: mod.rs
src/storage_api/: mod.rs
src/storage_api_p2p/: mod.rs
src/token-management/: mod.rs
src/validation/: mod.rs
storage/1AlgorithmsandComputationmp4/: 1270018081  1270018083
storage/uyumsuzlar2Türkçedublajmp4/: 1270018081  1270018082  1270018083
truffle_project/: package-lock.json  package.json  truffle-config.js
truffle_project/contracts/: MyToken.sol  StorageStaking.sol
truffle_project/migrations/: 2_deploy_contracts.js
