[package]
name = "decentralized-storage-"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
cipher = "0.4.4"
block-modes = "0.8"
rand = "0.8"
hmac = "0.11"
sha2 = "0.9"
hex = "0.4"
generic-array = "0.14"
libp2p = "0.54.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pkcs7 = "0.4"
jsonwebtoken = "8.1.1"
serde_derive = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
futures = "0.3"



[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3           # Optimizasyon seviyesi (hız için optimize)