[package]
name = "decentralized-storage-"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
cipher = "0.4.4"
block-modes = "0.8"
rand = "0.8"
hmac = "0.11"
sha2 = "0.9"
hex = "0.4"
generic-array = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pkcs7 = "0.4"
jsonwebtoken = "8.1.1"
serde_derive = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
futures = "0.3"
base64 = "0.22.1"
lazy_static = "1.4"
ethers = "2.0.14"
dotenv = "0.15.0"
uuid = { version = "1.11.1", features = ["v4"] }
crypto ={version = "0.5.0",features = ["digest"]}
async-std = "1.10.0"
chrono = "0.4.38"
libp2p = { version = "0.41", features = ["gossipsub", "identify", "mdns", "noise", "tcp-tokio", "yamux"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.40"
reqwest = "0.11.4"
warp = "0.3.0"
sys-info = "0.9.1"
libc = "0.2.169"
md5 = "0.7.0"
actix-multipart = "0.7.2"
bytes = "1.1.0"
nix = "0.29.0"
winapi = { version = "0.3", features = ["fileapi"] }
openssl = "0.10.69"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["limit"] }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3           # Optimizasyon seviyesi (hız için optimize)


